# STC-2

Dispider/: dispider.py  inference.py  requirements.txt  run.sbatch  run_ovo.sh
OVO-Bench/: inference.py  run.sbatch  score.py
OVO-Bench/models/: Dispider.py
OVO-Bench/utils/: OVOBench.py  OVOBenchScore.py  chunk_videos.py  sample_frames.py
StreamForest/: .env.example  .gitignore  README.md  download_hf.py  environment.yml  requirements-lock.txt  requirements.txt  run.sbatch  setup.sh
StreamForest/llava/: __init__.py  video_utils.py
livecc/: .gitignore  README.md  controller.py  qwen2_5_vl_with_cacher.py  qwen_vl_with_cacher.py  requirements.txt  run.sbatch  setup_env.sh
livecc/demo/: app.py  cli.py  infer.py  model_path.py
rekv/: README.md  pyproject.toml
rekv/docs/: dispider_torchrun_ovo.md
rekv/model/: __init__.py  abstract_rekv.py  flash_vstream_rekv.py  llava_onevision_rekv.py  longva_rekv.py  patch.py  video_llava_rekv.py
rekv/model/attention/: __init__.py  kv_cache_manager.py  rekv_attention.py  rope.py  utils.py
rekv/model/attention/dot_production_attention/: __init__.py  base.py  torch_impl.py
rekv/model/video_qa/: __init__.py  base.py  configs.py  ovobench.py  rekv_offline.py  rekv_stream.py  run_distributed.py  solver_factory.py  streamingbench.py
rekv/model/video_qa/eval/: __init__.py  eval_open_ended.py  evaluate.py
rekv/model/video_qa/utils/: __init__.py  data_utils.py  merge_utils.py  model_utils.py
rekv/scripts/: run.sh  run_dispider_ovo_torchrun.sh  torchrun_dispider_ovo.py
stc_core_code/: __init__.py  pruner.py
(+110 files in other folders)
