[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "STC"
version = "1.0"
description = "STC: Streaming Token Compression for Streaming Video Understanding."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # Core ML frameworks
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=1.0.0",
    "flash-attn>=2.5.0",
    "safetensors>=0.4.0",
    "triton>=3.0.0",

    # Video processing
    "decord>=0.6.0",
    "moviepy>=1.0.3",
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.5.0",

    # Data & numerical computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "einops>=0.7.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Utilities
    "openai>=1.0.0",
    "tqdm>=4.60.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",

    # HTTP & model hub
    "requests>=2.28.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "logzero",
    "imgcat",
]
experiment = [
    "torch-kmeans",
]

[tool.setuptools.packages.find]
exclude = [
    ".git*",
    ".vscode*",
    "data*",
    "model_zoo*",
    "results*",
    "scripts*",
    "*.log",
    "*.pyc",
    "__pycache__",
]
